--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,7 +23,7 @@
 
   {% include ga.html %}
   {% include firebase.html %}
-  <script src="js/app.js"></script>
+  <script src="/docs/js/app.js"></script>
 </body>
 
 </html>
