--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,6 +4,7 @@
 {% include head.html %}
 
 <body onload="start()">
+  <h1>Hello World</h1>
   {% for page in site.pages %}
   <section id="page{{page.pageNo}}" class="page">
     <!-- page.layout: {{ page.layout }} -->
