--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,7 +2,8 @@
 <html lang="en-us">
 
 {% include head.html %}
-
+<body>
+  <h1>Hello World</h1></body>
 <body onload="start()">
   <h1>Hello World</h1>
   {% for page in site.pages %}
