--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="en-us">
-
-{% include head.html %}
-<body onload="start()">
-  <h1>Hello World</h1>
-  {% for page in site.pages %}
-  <section id="page{{page.pageNo}}" class="page">
-    <!-- page.layout: {{ page.layout }} -->
-    {% if page.layout == "text" %}
-    {% include text.html content=page.content title=page.title button=page.button %}
-    {% endif %}
-
-    {% if page.layout == "pairwise" %}
-    {% include pairwise.html content=page.content title=page.title questions=page.questions %}
-    {% endif %}
-
-   </section>
-  {% endfor %}
-  <script src="/js/app.js"></script>
-</body>
-
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <section>
+      {{ content }}
+    </section>
+  </body>
 </html>
+
