--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,7 +16,7 @@
 
    </section>
   {% endfor %}
-  <script src="/js/app.js"></script>
+  <script src="/docs/js/app.js"></script>
 </body>
 
 </html>
