--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,6 +10,10 @@
     {% include text.html content=page.content title=page.title button=page.button %}
     {% endif %}
 
+    {% if page.layout == "form" %}
+    {% include form.html content=page.content title=page.title button=page.button %}
+    {% endif %}
+
     {% if page.layout == "pairwise" %}
     {% include pairwise.html content=page.content title=page.title questions=page.questions %}
     {% endif %}
