--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -1,4 +1,4 @@
-<h1>{{ include.title }}</h1>
+<h1>{{ include.title }}{{ include.button }}</h1>
 {{ include.content | markdownify }}
 
 <a href="#" onclick="storeAndNext('left')">
@@ -14,6 +14,9 @@
   </div>
 </a>
 
+<div id="middlebar">
+  <button class="submit restart" onclick="previousPage()">Restart</button>
+</div>
 <div id="bottombar">
   <div id="slider"></div>
 </div>
@@ -42,8 +45,9 @@
     next()
   }
 
-  function setContent(id, name, img, pos) {
+  function setContent(id, name, img, pos, prompt) {
     document.getElementById(id + "_title").innerHTML = name
+    document.getElementById(id + "_img").innerHTML = prompt;
     document.getElementById(id + "_img").style.backgroundImage = "url('" + img + "')";
     document.getElementById(id + "_img").style.backgroundPosition = pos;
   }
@@ -56,12 +60,24 @@
     document.getElementById("slider").style.width = (count / combos.length) * 100 + "%";
     if (count < combos.length) {
       var curPair = combos[count]
-      setContent("left", animals[curPair[0]].title, animals[curPair[0]].image, animals[curPair[0]].img_pos)
+      setContent("left", animals[curPair[0]].title, animals[curPair[0]].image, animals[curPair[0]].img_pos, animals[curPair[0]].prompt)
 
-      setContent("right", animals[curPair[1]].title, animals[curPair[1]].image, animals[curPair[1]].img_pos)
+      setContent("right", animals[curPair[1]].title, animals[curPair[1]].image, animals[curPair[1]].img_pos, animals[curPair[1]].prompt)
       count++
     } else {
       nextPage()
     }
   }
+
+  function previous() {
+    document.getElementById("slider").style.width = (count / combos.length) * 100 + "%";
+    if (count < combos.length) {
+      count--
+      var curPair = combos[count]
+      setContent("left", animals[curPair[0]].title, animals[curPair[0]].image, animals[curPair[0]].img_pos)
+    } else {
+      previousPage()
+    }
+  }
+
 </script>
