--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -22,7 +22,7 @@ p {
   margin-top: 0px;
 }
 
-button {
+button, .submit {
   text-transform: uppercase;
   border-radius: 100px;
   border: none;
@@ -70,12 +70,17 @@ img {
   border-radius: 5px;
 }
 
+.restart {
+  align-self: center;
+}
+
 .img {
   background: white;
   background-image: url("");
   background-repeat: no-repeat;
-  width: 100%;
-  height: 300px;
+  width: 80%;
+  height: 300%;
+  padding: 10%;
   background-position: center;
   background-size: cover;
   margin-bottom: 10px;
@@ -94,6 +99,49 @@ img {
   text-align: center;
 }
 
+/*--- Form wise---*/
+.form {
+  margin-left: 5%;
+  margin-right: 10%;
+  width: 80%;
+  background: #fff;
+  border-radius: 2px;
+  box-shadow: 0 3px 0 0 rgba(0, 0, 0, .03), 0 0 0 2px rgba(0, 0, 0, .03);
+  padding-bottom: 20px;
+  text-align: left;
+  align-self: center;
+}
+
+.myformtitle{
+  margin-left: 5%;
+  padding-top: 2%;
+}
+
+.myformlabel{
+  margin-left: 5%;
+  margin-top: 10px !important;
+  padding-top: 10px;
+}
+
+.myform {
+  margin-left: 5%;
+  margin-right: 10%;
+  margin-top: 5px;
+  width: 80%;
+}
+
+.submit{
+  margin-top: 3%;
+  margin-left: 5%;
+  margin-right: 10%;
+}
+
+textarea {
+  width: 90% !important;
+  height: 50px !important;
+}
+
+
 /* if device supports hover, we show interaction possibility with a fade */
 @media (hover: hover) {
   .block {
@@ -103,6 +151,15 @@ img {
 
 .block:hover {
   opacity: 1;
+}
+
+#middlebar {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  left: 0px;
+  -ms-transform: translateX(40%);
+  transform: translateX(40%);
 }
 
 #bottombar {
