--- a/docs/_includes/form.html
+++ b/docs/_includes/form.html
@@ -8,10 +8,10 @@
       <form name="{{ include.title }} {% if formnumber > 0 %}{{ formnumber | plus:1 }}{% endif %}" id="{{ page.url | slugify }}" class="form autofill" method="POST" action="{{ pageform.redirect }}" data-netlify="true" netlify-honeypot="_gotcha">
          <input type="hidden" name="_to" value="{{ pageform.to }}">
          {% elsif pageform.form_engine == 'cloudcannon' %}
-      <form id="{{ page.url | slugify }}" class="form autofill" method="POST" action="">
+      <form id="{{ page.url | slugify }}" class="form autofill" method="POST" action="form.py">
          <input type="hidden" name="_to" value="{{ pageform.to }}">
          {% elsif pageform.form_engine == 'formspree' %}
-      <form id="{{ page.url | slugify }}" class="form autofill" method="POST" action="">
+      <form id="{{ page.url | slugify }}" class="form autofill" method="POST" action="form.py">
          <input type="hidden" name="_next" value="{{ site.url }}{{ pageform.redirect }}" />
          {% elsif pageform.form_engine == 'formbucket' %}
       <form id="{{ page.url | slugify }}" class="form autofill" method="POST" action="form.py">
