change submit button

--- a/docs/_includes/text.html
+++ b/docs/_includes/text.html
@@ -6,3 +6,7 @@
         {% endif %}
         </div>
         
+
+{% if include.button == "lastpage"  %}
+<button type="submit">Submit</button>
+{% endif %}
