--- a/docs/_includes/form.html
+++ b/docs/_includes/form.html
@@ -40,7 +40,7 @@
 
          {% elsif item.input_type == 'submit' %}
          <div>
-            <input class="submit" onclick="nextPage()" type="button" value="{{ item.placeholder }}" >{{ include.nextButton }}</input>
+            <input class="submit" onclick="validator()" type="button" value="{{ item.placeholder }}" >{{ include.nextButton }}</input>
          </div>
 
          
