update form submission

--- a/docs/_includes/text.html
+++ b/docs/_includes/text.html
@@ -8,5 +8,5 @@
         
 
 {% if include.button == "lastpage"  %}
-<button type="submit">Submit</button>
+<button id="submitform" type="submit">Submit</button>
 {% endif %}
