fix all buttons

--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -15,7 +15,7 @@
 </a>
 
 <div id="middlebar">
-  <button class="submit restart" onclick="previousPage()">Restart</button>
+  <button class="submit restart" type="button" onclick="previousPage()">Restart</button>
 </div>
 <div id="bottombar">
   <div id="slider"></div>
