fix all buttons

--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -101,6 +101,8 @@ img {
 
 /*--- Form wise---*/
 .form {
+  padding-top: 5%;
+  margin-top: 5%;
   margin-left: 5%;
   margin-right: 10%;
   width: 80%;
