--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -88,6 +88,7 @@ img {
 
 /*--- Pair wise---*/
 .block {
+  margin-top: 5%;
   margin-left: 6px;
   margin-right: 6px;
   width: calc(50% - 12px);
@@ -97,12 +98,14 @@ img {
   float: left;
   padding-bottom: 20px;
   text-align: center;
+  font-size: x-large;
 }
 
 /*--- Form wise---*/
 .form {
-  padding-top: 5%;
-  margin-top: 5%;
+  padding-top: 1%;
+  margin-top: 2%;
+  margin-bottom: 2%;
   margin-left: 5%;
   margin-right: 10%;
   width: 80%;
@@ -110,22 +113,25 @@ img {
   border-radius: 2px;
   box-shadow: 0 3px 0 0 rgba(0, 0, 0, .03), 0 0 0 2px rgba(0, 0, 0, .03);
   padding-bottom: 20px;
-  text-align: left;
+  text-align: center;
   align-self: center;
 }
 
 .myformtitle{
+  font-size: xx-large;
   margin-left: 5%;
   padding-top: 2%;
 }
 
 .myformlabel{
+  font-size: x-large;
   margin-left: 5%;
   margin-top: 10px !important;
   padding-top: 10px;
 }
 
 .myform {
+  font-size: x-large;
   margin-left: 5%;
   margin-right: 10%;
   margin-top: 5px;
