--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -113,7 +113,7 @@ img {
   border-radius: 2px;
   box-shadow: 0 3px 0 0 rgba(0, 0, 0, .03), 0 0 0 2px rgba(0, 0, 0, .03);
   padding-bottom: 20px;
-  text-align: center;
+  text-align: left;
   align-self: center;
 }
 
