--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -3,32 +3,90 @@
 
 {% include head.html %}
 <body onload="start()">
-    <form id="promptForm" class="ajaxForm form autofill" method="POST" action="https://formcarry.com/s/hOMJJsIDFTb"  accept-charset="UTF-8" enctype="multipart/form-data">
-        <input type="hidden" name="_next" value="{{ site.url }}{{ pageform.redirect }}" />
+    <header class="site-header" role="banner">
+      <div class="wrapper">
+        <a class="site-title" rel="author" href="/docs/">Prompt Annotation Survey</a>
+        <nav class="site-nav">
+            <input type="checkbox" id="nav-trigger" class="nav-trigger" />
+            <label for="nav-trigger">
+              <span class="menu-icon">
+                  <svg viewBox="0 0 18 15" width="18px" height="15px">
+                    <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
+                  </svg>
+              </span>
+            </label>
+            <div class="trigger"><a class="page-link" href="/docs/about/">About</a></div>
+        </nav>
+      </div>
+  </header>
+  <main class="page-content" aria-label="Content">
+    <div class="wrapper">
+      <form id="promptForm" class="ajaxForm form autofill" method="POST" action="https://formcarry.com/s/hOMJJsIDFTb"  accept-charset="UTF-8" enctype="multipart/form-data">
+          <input type="hidden" name="_next" value="{{ site.url }}{{ pageform.redirect }}" />
+        
+            {% for page in site.pages %}
+            <section id="page{{page.pageNo}}" class="page">
+              <!-- page.layout: {{ page.layout }} -->
+              {% if page.layout == "text" %}
+              {% include text.html content=page.content title=page.title button=page.button %}
+              {% endif %}
+
+
+              {% if page.layout == "form" %}
+              {% include form.html content=page.content form="0" button=page.button %}
+              {% endif %}
+
+
+              {% if page.layout == "pairwise" %}
+              {% include pairwise.html content=page.content title=page.title questions=page.questions %}
+              {% endif %}
+
+            </section>
+            {% endfor %}
+
       
-          {% for page in site.pages %}
-          <section id="page{{page.pageNo}}" class="page">
-            <!-- page.layout: {{ page.layout }} -->
-            {% if page.layout == "text" %}
-            {% include text.html content=page.content title=page.title button=page.button %}
-            {% endif %}
-
-
-            {% if page.layout == "form" %}
-            {% include form.html content=page.content form="0" button=page.button %}
-            {% endif %}
-
-
-            {% if page.layout == "pairwise" %}
-            {% include pairwise.html content=page.content title=page.title questions=page.questions %}
-            {% endif %}
-
-          </section>
-          {% endfor %}
-
-    
-    
-    </form>
+      
+      </form>
+    </div>
+  </main>
+  
+  <footer class="site-footer h-card">
+    <data class="u-url" href="/docs/"></data>
+    <div class="wrapper">
+       <h2 class="footer-heading">No Title</h2>
+       <div class="footer-col-wrapper">
+          <div class="footer-col footer-col-1">
+             <ul class="contact-list">
+                <li class="p-name">No Title</li>
+                <li><a class="u-email" href="mailto:your-email@example.com">your-email@example.com</a></li>
+             </ul>
+          </div>
+          <div class="footer-col footer-col-2">
+             <ul class="social-media-list">
+                <li>
+                   <a href="https://github.com/jekyll">
+                      <svg class="svg-icon">
+                         <use xlink:href="/docs/assets/minima-social-icons.svg#github"></use>
+                      </svg>
+                      <span class="username">jekyll</span>
+                   </a>
+                </li>
+                <li>
+                   <a href="https://www.twitter.com/jekyllrb">
+                      <svg class="svg-icon">
+                         <use xlink:href="/docs/assets/minima-social-icons.svg#twitter"></use>
+                      </svg>
+                      <span class="username">jekyllrb</span>
+                   </a>
+                </li>
+             </ul>
+          </div>
+          <div class="footer-col footer-col-3">
+             <p>Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.</p>
+          </div>
+       </div>
+    </div>
+ </footer>
 
 
     <script src="/docs/js/app.js"></script>
