change button alignment

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -13,4 +13,5 @@
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.baseurl }}/docs/style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|PT+Serif:300,600" rel="stylesheet">
+    <link rel="stylesheet" href="/docs/assets/main.css">
   </head>
