add skip button

--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -15,9 +15,12 @@
 </a>
 
 <div id="middlebar">
-  <button class="submit restart" type="button" onclick="previousPage()">Restart</button>
+  <button class="submit restart" type="button" onclick="storeAndNext('skip')">Skip</button>
 </div>
 <div id="bottombar">
+  <div>
+    <button class="submit restart" type="button" onclick="previousPage()">Restart</button>
+  </div>
   <div id="slider"></div>
 </div>
 
