--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -26,14 +26,23 @@
 <input type="hidden" id="answers" name="answers" value="">
 
 <script>
-  var animals = {{ site.data.prompts | jsonify }}    
+  var prompts = {{ site.data.prompts | jsonify }}    
   var combos = [];
   var count = 0;
   var answers = []
+  const shuffle = ([...arr]) => {
+    let m = arr.length;
+    while (m) {
+      const i = Math.floor(Math.random() * m--);
+      [arr[m], arr[i]] = [arr[i], arr[m]];
+    }
+    return arr;
+  };
 
   function calcCombos() {
-    for (var i = 0; i < animals.length; i++)
-      for (var j = i + 1; j < animals.length; j++)
+    prompts = shuffle(prompts);
+    for (var i = 0; i < prompts.length; i++)
+      for (var j = i + 1; j < prompts.length; j++)
       {
         combos[combos.length] = [i, j, false]
       }
@@ -49,11 +58,11 @@
     next()
   }
 
-  function setContent(id, name, img, pos, prompt) {
-    document.getElementById(id + "_title").innerHTML = name
+  function setContent(id, prompt) {
+    //document.getElementById(id + "_title").innerHTML = name
     document.getElementById(id + "_img").innerHTML = prompt;
-    document.getElementById(id + "_img").style.backgroundImage = "url('" + img + "')";
-    document.getElementById(id + "_img").style.backgroundPosition = pos;
+    //document.getElementById(id + "_img").style.backgroundImage = "url('" + img + "')";
+    //document.getElementById(id + "_img").style.backgroundPosition = pos;
   }
 
   function setVal(a, b, slider) {
@@ -64,9 +73,9 @@
     document.getElementById("slider").style.width = (count / combos.length) * 100 + "%";
     if (count < combos.length) {
       var curPair = combos[count]
-      setContent("left", animals[curPair[0]].title, animals[curPair[0]].image, animals[curPair[0]].img_pos, animals[curPair[0]].prompt)
+      setContent("left", prompts[curPair[0]].prompt)
 
-      setContent("right", animals[curPair[1]].title, animals[curPair[1]].image, animals[curPair[1]].img_pos, animals[curPair[1]].prompt)
+      setContent("right", prompts[curPair[1]].prompt)
       count++
     } else {
       document.getElementById("answers").value = JSON.stringify(answers);
