--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -45,7 +45,7 @@
               {% include text.html content=page.content title=page.title button=page.button %}
               {% endif %}
 
-              {% if page.layout == "pairwise" %}
+              {% if page.layout == "pairwise_2" %}
               {% include pairwise.html content=page.content title=page.title questions=page.questions %}
               {% endif %}
 
