--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -40,7 +40,7 @@
   };
 
   function calcCombos() {
-    prompts = shuffle(prompts)[:10];
+    prompts = shuffle(prompts).slice(1, 5 + 1);
     for (var i = 0; i < prompts.length; i++)
       for (var j = i + 1; j < prompts.length; j++)
       {
