--- a/docs/_includes/text.html
+++ b/docs/_includes/text.html
@@ -8,5 +8,6 @@
         
 
 {% if include.button == "lastpage"  %}
+<button class="inline submit" type="button" onclick="previousPage()" >Back</button>
 <button id="submitform" type="submit">Submit</button>
 {% endif %}
