--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -13,7 +13,7 @@
     <label id="right_title_{{page.round}}">Empty</label>
   </div>
 </a>
-<button class="submit restart" type="button" onclick="storeAndNext('skip')">Skip</button>
+<button id="skip_{{page.round}}" class="submit restart" type="button" onclick="storeAndNext('skip')">Skip</button>
 
 
 <div id="bottombar">
@@ -115,7 +115,8 @@
     if (count < combos.length) {
       count--
       var curPair = combos[count]
-      setContent("left", animals[curPair[0]].title, animals[curPair[0]].image, animals[curPair[0]].prompt)
+      //setContent("left", animals[curPair[0]].title, animals[curPair[0]].image, animals[curPair[0]].prompt)
+      //setContent("right", animals[curPair[-1]].title, animals[curPair[-1]].image, animals[curPair[-1]].prompt)
     } else {
       previousPage()
     }
