--- a/docs/_includes/pairwise_script.html
+++ b/docs/_includes/pairwise_script.html
@@ -36,8 +36,8 @@
     }
   
     function storeAndNext(answer) {
-      var left = document.getElementById("left_title_" + round).innerHTML
-      var right = document.getElementById("right_title_" + round).innerHTML
+      var left = document.getElementById("left_img_" + round).innerHTML
+      var right = document.getElementById("right_img_" + round).innerHTML
   
       setVal(left, right, answer)
       next()
