--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -99,6 +99,7 @@ img {
   padding-bottom: 20px;
   text-align: center;
   font-size: x-large;
+  color: black !important;
 }
 
 /*--- Form wise---*/
