--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -1,20 +1,25 @@
 <h1>{{ include.title }}{{ include.button }}</h1>
 {{ include.content | markdownify }}
 
-<a id="left_link_{{page.round}}" href="#" onclick="storeAndNext('left')">
-  <div class="block">
-    <div id="left_img_{{page.round}}" class="img right"></div>
-    <label id="left_title_{{page.round}}">Empty</label>
-  </div>
-</a>
-<a id="right_link_{{page.round}}" href="#" onclick="storeAndNext('right')">
-  <div class="block">
-    <div id="right_img_{{page.round}}" class="img left"></div>
-    <label id="right_title_{{page.round}}">Empty</label>
-  </div>
-</a>
-<button id="skip_{{page.round}}" class="submit restart" type="button" onclick="storeAndNext('skip')">Skip</button>
 
+<div id="middlebar">
+  <div>
+    <button id="skip_{{page.round}}" class="submit restart" type="button" onclick="storeAndNext('skip')">Skip</button>
+  </div>
+
+  <a id="left_link_{{page.round}}" href="#" onclick="storeAndNext('left')">
+    <div class="block">
+      <div id="left_img_{{page.round}}" class="img right"></div>
+      <!--<label id="left_title_{{page.round}}">Empty</label>-->
+    </div>
+  </a>
+  <a id="right_link_{{page.round}}" href="#" onclick="storeAndNext('right')">
+    <div class="block">
+      <div id="right_img_{{page.round}}" class="img left"></div>
+      <!--<label id="right_title_{{page.round}}">Empty</label>-->
+    </div>
+  </a>
+</div>
 
 <div id="bottombar">
   <div>
