--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -23,3 +23,5 @@
   </div>
   <div id="slider_{{page.round}}"></div>
 </div>
+
+<input type="hidden" id="answers_{{page.round}}" name="answers_{{page.round}}" value="">
