update pairwise layout

--- a/docs/_includes/pairwise.html
+++ b/docs/_includes/pairwise.html
@@ -4,23 +4,22 @@
 <div>
   <button id="skip_{{page.round}}" class="submit restart" type="button" onclick="storeAndNext('skip')">Skip</button>
 </div>
-
-<a id="left_link_{{page.round}}" href="#" onclick="storeAndNext('left')">
-  <div class="block">
-    <div id="left_img_{{page.round}}" class="img right"></div>
-    <!--<label id="left_title_{{page.round}}">Empty</label>-->
-  </div>
-</a>
-<a id="right_link_{{page.round}}" href="#" onclick="storeAndNext('right')">
-  <div class="block">
-    <div id="right_img_{{page.round}}" class="img left"></div>
-    <!--<label id="right_title_{{page.round}}">Empty</label>-->
-  </div>
-</a>
-
 <div>
-    <button class="submit restart" type="button" onclick="previousPage()">Restart</button>
-  </div>
+  <a id="left_link_{{page.round}}" href="#" onclick="storeAndNext('left')">
+    <div class="block">
+      <div id="left_img_{{page.round}}" class="img right"></div>
+      <!--<label id="left_title_{{page.round}}">Empty</label>-->
+    </div>
+  </a>
+  <a id="right_link_{{page.round}}" href="#" onclick="storeAndNext('right')">
+    <div class="block">
+      <div id="right_img_{{page.round}}" class="img left"></div>
+      <!--<label id="right_title_{{page.round}}">Empty</label>-->
+    </div>
+  </a>  
+</div>
+<div>
+  <button class="submit restart" type="button" onclick="previousPage()">Restart</button>
   <div id="slider_{{page.round}}"></div>
 </div>
 
