--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -63,7 +63,17 @@
     </div>
   </main>
 
+    <script>
+      $("textarea").each(function () {
+        this.setAttribute("style", "height:" + (this.scrollHeight) + "px;overflow-y:hidden;");
+      }).on("input", function () {
+        this.style.height = 0;
+        this.style.height = (this.scrollHeight) + "px";
+      });
+    </script>
+
     <script src="/docs/js/app.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.3.min.js"></script>
 </body>
 
 </html>
