--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -42,8 +42,8 @@ button, .submit {
 }
 
 .skip {
-  margin-top: 0px;
-  margin-left: 40%;
+  margin-top: 0px !important;
+  margin-left: 40% !important;
 }
 
 /* label {
@@ -159,7 +159,7 @@ img {
 textarea {
   width: 90% !important;
   height: 100px !important;
-  font-size: x-large;
+  font-size: large;
 }
 
 
